# pyxems

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: python-app.yml
docs/: cli-ref.md  index.md
src/pyxems/: csx.py  fdtd.py  main.py  run.py  shell.nix
tests/: test_main.py  test_run.py
tests/data/: simp_patch.xml
