[project]
name = "pyxems"
version = "0.1.0"
description = "A XML-config generator for OpenEMS"
readme = "README.md"
authors = [
    { name = "Patarimi", email = "mpqqch@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
simulate = [
    "cyclopts>=4.5.1",
    "python-dotenv>=1.2.1",
]

[build-system]
requires = ["uv_build>=0.9.15,<0.10.0"]
build-backend = "uv_build"

[tool.poe.tasks.precommit]
sequence = [
    {cmd = "uv sync --all-groups --all-extras"},
    {cmd = "uvx ruff format"},
    {cmd = "uvx ruff check"},
    {cmd = "uvx ty check"},
    {cmd = "pytest --basetemp=tmp"},
]


[tool.pytest.ini_options]
testpaths = ["tests"]
log_cli_level = "ERROR"
log_file_level = "INFO"
log_file = "./pytest.log"

[dependency-groups]
dev = [
    "poethepoet>=0.40.0",
    "pytest>=9.0.2",
]
doc = [
    "cyclopts[mkdocs]>=4.5.1",
    "mkdocs>=1.6.1",
    "mkdocs-api-autonav>=0.4.0",
    "mkdocs-material>=9.7.2",
    "mkdocstrings[python]>=1.0.3",
]
